--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: GitHub pages template
-description: A simple template based on minimal jekyll theme
+title: ADA Test Website
+description: A test website for ADA
 show_downloads: True
 navigation:
   - title: Home
