--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: ADA Test Website
-description: A test website for ADA
+title: ADA Template Website
+description: A template website for ADA
 show_downloads: True
 navigation:
   - title: Home
