--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: ADA Template Website
+title: ADA METAL Website
 description: A template website for ADA
 show_downloads: True
 navigation:
