--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-plugins:
-  - jekyll-remote-theme
+# plugins:
+#   - jekyll-remote-theme
 
-remote_theme: zivhub/monophase@main
+# remote_theme: zivhub/monophase@main
 
-#theme: monophase #jekyll-theme-minimal
+theme: jekyll-theme-minimal
 title: ADA METAL Website
 description: ADA METAL Team project website
 show_downloads: True
